[gd_scene load_steps=18 format=2]

[ext_resource path="res://Art/GUI/pause.png" type="Texture" id=1]
[ext_resource path="res://Scenes/PlayerShip.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/GUI/play.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Art/GUI/home.png" type="Texture" id=5]
[ext_resource path="res://Art/Background/fondo1.png" type="Texture" id=6]
[ext_resource path="res://Art/GUI/yes.png" type="Texture" id=7]
[ext_resource path="res://Art/GUI/no.png" type="Texture" id=8]
[ext_resource path="res://Art/GUI/sfx_on.png" type="Texture" id=9]
[ext_resource path="res://Art/GUI/sfx_off.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Tuto_Range.gd" type="Script" id=11]
[ext_resource path="res://Art/music/sound2/70BUCLE2.ogg" type="AudioStream" id=12]
[ext_resource path="res://Art/Fonts/Kenney Blocks.ttf" type="DynamicFontData" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "play",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "pause",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "home",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": false,
"name": "sfx_on",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": false,
"name": "sfx_off",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 13 )

[node name="Tuto_Mov" type="Node2D"]
script = ExtResource( 11 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}
Enemy = ExtResource( 4 )
PLAYER = ExtResource( 2 )

[node name="BG" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="BG"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="BG/ParallaxBackground"]
motion_mirroring = Vector2( 0, 3838 )

[node name="Sprite" type="Sprite" parent="BG/ParallaxBackground/ParallaxLayer"]
position = Vector2( 360, 200 )
texture = ExtResource( 6 )

[node name="ninjaSpawn" type="Timer" parent="."]
autostart = true

[node name="Buttons" type="Control" parent="."]
margin_top = 1150.0
margin_right = 40.0
margin_bottom = 1190.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_menu" type="Button" parent="Buttons"]
pause_mode = 2
margin_left = 560.0
margin_right = 608.0
margin_bottom = 48.0
rect_scale = Vector2( 2, 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pauseBtt" type="AnimatedSprite" parent="Buttons/pause_menu"]
z_index = 3
frames = SubResource( 1 )
animation = "pause"
centered = false

[node name="home" type="Button" parent="Buttons/pause_menu"]
visible = false
margin_top = -140.0
margin_right = 48.0
margin_bottom = -92.0
flat = true

[node name="Home" type="AnimatedSprite" parent="Buttons/pause_menu/home"]
z_index = 3
frames = SubResource( 2 )
animation = "home"
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Button_yes" type="Button" parent="Buttons/pause_menu/home"]
visible = false
margin_left = -70.0
margin_right = -22.0
margin_bottom = 48.0
flat = true

[node name="yes" type="Sprite" parent="Buttons/pause_menu/home/Button_yes"]
z_index = 3
texture = ExtResource( 7 )
centered = false

[node name="Button_no" type="Button" parent="Buttons/pause_menu/home"]
visible = false
margin_left = -140.0
margin_right = -92.0
margin_bottom = 48.0
flat = true

[node name="no" type="Sprite" parent="Buttons/pause_menu/home/Button_no"]
z_index = 3
texture = ExtResource( 8 )
centered = false

[node name="sfx" type="Button" parent="Buttons/pause_menu"]
visible = false
margin_top = -70.0
margin_right = 48.0
margin_bottom = -22.0
flat = true

[node name="sfx" type="AnimatedSprite" parent="Buttons/pause_menu/sfx"]
z_index = 3
frames = SubResource( 3 )
animation = "sfx_on"
centered = false

[node name="Music_Green" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -10.0
autoplay = true

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_right = 716.0
margin_bottom = 249.0
custom_fonts/font = SubResource( 4 )
text = "Tu nave solo dispara si 
el enemigo esta dentro de 
este rango. 
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="ninjaSpawn" to="." method="_on_ninjaSpawn_timeout"]
[connection signal="pressed" from="Buttons/pause_menu" to="." method="_on_pause_menu_pressed"]
[connection signal="pressed" from="Buttons/pause_menu/home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="Buttons/pause_menu/home/Button_yes" to="." method="_on_Button_yes_pressed"]
[connection signal="pressed" from="Buttons/pause_menu/home/Button_no" to="." method="_on_Button_no_pressed"]
[connection signal="pressed" from="Buttons/pause_menu/sfx" to="." method="_on_sfx_pressed"]
